--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
         </div>
       </div>
 
+
+      <div class="hero-slide">
+        <img src="https://plus.unsplash.com/premium_photo-1664202526559-e21e9c0fb46a?auto=format&fit=crop&fm=jpg&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8ZmFzaGlvbnxlbnwwfHwwfHx8MA%3D%3D&ixlib=rb-4.1.0&q=60&w=3000">
+        <div class="hero-content">
+          <h1>Fashion Stores</h1>
+          <p>Trendy clothing, footwear and accessories in Nashik.</p>
+          <a href="#" class="btn btn-danger px-4 py-2 rounded-pill">
+           Explore Fashion
+          </a>
+        </div>
+      </div>
+
       <div class="hero-slide">
         <img src="https://live.staticflickr.com/7818/46349770165_f3b54109c4_o.jpg">
         <div class="hero-content">
@@ -65,16 +77,8 @@
         </div>
       </div>
 
-      <div class="hero-slide">
-        <img src="https://plus.unsplash.com/premium_photo-1664202526559-e21e9c0fb46a?auto=format&fit=crop&fm=jpg&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8ZmFzaGlvbnxlbnwwfHwwfHx8MA%3D%3D&ixlib=rb-4.1.0&q=60&w=3000">
-        <div class="hero-content">
-          <h1>Fashion Stores</h1>
-          <p>Trendy clothing, footwear and accessories in Nashik.</p>
-          <a href="#" class="btn btn-danger px-4 py-2 rounded-pill">
-           Explore Fashion
-          </a>
-        </div>
-      </div>
+      
+      
       <!-- STATS OVERLAY -->
       <div class="slider-stats">
         <div class="stat-box">
@@ -93,8 +97,92 @@
         </div>
   </section>
   </div>
-  </section>
+  
+  <!-- WELCOME SECTION -->
+<section class="welcome-section container my-5">
+  <div class="row align-items-center">
+    <div class="col-lg-6 mb-4">
+      <h2 class="welcome-title">Welcome to NashikLocal</h2>
+      <p>
+        Your comprehensive guide to the best local businesses in Nashik.
+        We've curated trusted shops and services to help you discover everything
+        our beautiful city has to offer.
+      </p>
 
+      <p>
+        From electronics and fashion to home decor and gifts — we’ve got you covered.
+      </p>
+
+      <div class="mt-4">
+        <a href="./pages/shops.html" class="btn btn-primary px-4 py-2 rounded-pill me-3">
+          Browse Shops
+        </a>
+        <a href="#" class="btn btn-outline-primary px-4 py-2 rounded-pill">
+          List Your Business
+        </a>
+      </div>
+    </div>
+
+    <div class="col-lg-6 text-center">
+      <img
+        src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d"
+        class="img-fluid welcome-img"
+        alt="NashikLocal"
+      />
+    </div>
+  </div>
+</section>
+
+<!-- CATEGORY SECTION -->
+<section class="category-section container my-5">
+  <div class="d-flex justify-content-between align-items-center mb-4">
+    <h2 class="category-title">What are you looking for today?</h2>
+    <a href="./pages/shops.html" class="view-all">
+      View All Categories →
+    </a>
+  </div>
+
+  <div class="row g-4">
+    <!-- Electronics -->
+    <div class="col-md-6 col-lg-3">
+      <div class="category-card">
+        <div class="cat-icon electronics">💻</div>
+        <h5>Electronics</h5>
+        <p>Gadgets, Appliances & Tech</p>
+        <span class="shop-count">4 SHOPS</span>
+      </div>
+    </div>
+
+    <!-- Fashion -->
+    <div class="col-md-6 col-lg-3">
+      <div class="category-card">
+        <div class="cat-icon fashion">👕</div>
+        <h5>Fashion</h5>
+        <p>Clothing, Shoes & Accessories</p>
+        <span class="shop-count">4 SHOPS</span>
+      </div>
+    </div>
+
+    <!-- Home -->
+    <div class="col-md-6 col-lg-3">
+      <div class="category-card">
+        <div class="cat-icon home">🏠</div>
+        <h5>Home & Living</h5>
+        <p>Decor, Furniture & Kitchen</p>
+        <span class="shop-count">4 SHOPS</span>
+      </div>
+    </div>
+
+    <!-- Grocery -->
+    <div class="col-md-6 col-lg-3">
+      <div class="category-card">
+        <div class="cat-icon gift">🎁</div>
+        <h5>Gifts</h5>
+        <p>Custom and handmade gifts</p>
+        <span class="shop-count">4 SHOPS</span>
+      </div>
+    </div>
+  </div>
+</section>
 </body>
-
 </html>
