--- a/index.html
+++ b/index.html
@@ -16,17 +16,29 @@
 <body>
 
   <!-- Navbar -->
-  <header class="navbar-custom">
-    <div class="logo">Nashik<span>Local</span></div>
+ <header class="navbar-custom">
+  <div class="logo">
+    <i class="fa-solid fa-location-dot me-2"></i>
+    <img src="./images/location.png">
+    Nashik<span>Local</span>
+  </div>
 
-    <nav class="nav-links">
-      <a href="index.html" class="active">Home</a>
-      <a href="./pages/shops.html">Shops</a>
-      <a href="./pages/about.html">About</a>
-      <a href="./pages/contact.html">Contact</a>
-      <a href="#" class="btn-business">List Business</a>
-    </nav>
-  </header>
+  <nav class="nav-links">
+    <a href="index.html" class="active">
+      <i class="fa-solid fa-house"></i> Home
+      <img src="./images/home.png">
+    </a>
+    <a href="./pages/shops.html">
+      <i class="fa-solid fa-shop"></i> Shops
+    </a>
+    <a href="./pages/about.html">
+      <i class="fa-solid fa-circle-info"></i> About
+    </a>
+    <a href="./pages/contact.html">
+      <i class="fa-solid fa-envelope"></i> Contact
+    </a>
+  </nav>
+</header>
 
   <!-- Hero Slider -->
   <section class="hero-slider">
@@ -123,9 +135,10 @@
       </div>
     </div>
 
-    <div class="col-lg-6 text-center">
+   <div class="col-lg-6">
+    <div class="welcome-img-box">
       <img
-        src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d"
+        src="https://i.pinimg.com/1200x/14/05/9e/14059eafb4bfd38f6421b0017959251c.jpg"
         class="img-fluid welcome-img"
         alt="NashikLocal"
       />
