--- a/pages/shops.html
+++ b/pages/shops.html
@@ -1,91 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>NashikLocal - Shops</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./../css/shops.css">
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+</head>
+
 <body>
-
-<!-- Navbar -->
-<header class="navbar">
-    <div class="logo">
-        <i class="fa-solid fa-location-dot"></i> NashikLocal
-    </div>
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#" class="active">Shops</a>
-        <a href="#">Contact</a>
-    </nav>
-</header>
-
-<!-- Main Section -->
-<section class="hero">
-    <h1>Explore <span>Local Shops</span></h1>
-    <p>
-        Discover the best local retail outlets across Nashik's popular areas.
-        Browse shops by category to find exactly what you're looking for.
-    </p>
-
-    <div class="categories">
-        <div class="card">
-            <i class="fa-solid fa-microchip blue"></i>
-            <h3>Electronics</h3>
-            <p>2 Shops Available</p>
+    <!-- ================= NAVBAR ================= -->
+    <header class="navbar-custom">
+        <div class="logo">
+            <i class="fa-solid fa-location-dot"></i>
+            <!-- <img src="./images/location.png" > -->
+            Nashik<span>Local</span>
         </div>
 
-        <div class="card">
-            <i class="fa-solid fa-shirt green"></i>
-            <h3>Fashion</h3>
-            <p>2 Shops Available</p>
+        <nav class="nav-links">
+            <a href="../index.html">
+                <i class="fa-solid fa-house"></i> Home
+            </a>
+            <a href="/pages/shops.html">
+                <i class="fa-solid fa-shop"></i> Shops
+            </a>
+            <a href="./pages/about.html">
+                <i class="fa-solid fa-circle-info"></i> About
+            </a>
+            <a href="/pages/contact.html">
+                <i class="fa-solid fa-envelope"></i> Contact
+            </a>
+        </nav>
+    </header>
+
+    <!-- Main Section -->
+    <section class="hero">
+        <h1 class="animated-title">Explore Local Shops</h1>
+        <p>
+            Discover the best local retail outlets across Nashik's popular areas.
+            Browse shops by category to find exactly what you're looking for.
+        </p>
+
+        <div class="categories">
+            <a href="./electronics.html" class="categories-decore">
+                <div class="card">
+                    <i class="fa-solid fa-microchip blue"></i>
+                    <h3>Electronics</h3>
+                    <p>2 Shops Available</p>
+                </div>
+            </a>
+
+            <a href="./fashion.html" class="categories-decore">
+                <div class="card">
+                    <i class="fa-solid fa-shirt green"></i>
+                    <h3>Fashion</h3>
+                    <p>2 Shops Available</p>
+                </div>
+            </a>
+
+            <a href="./home&living.html" class="categories-decore">
+                <div class="card">
+                    <i class="fa-solid fa-couch yellow"></i>
+                    <h3>Home & Living</h3>
+                    <p>1 Shop Available</p>
+                </div>
+            </a>
+
+            <a href="" class="categories-decore">
+                <div class="card">
+                    <i class="fa-solid fa-gift purple"></i>
+                    <h3>Gifts</h3>
+                    <p>1 Shop Available</p>
+                </div>
+            </a>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-container">
+            <!-- Brand -->
+            <div class="footer-col">
+                <h2 class="footer-logo">Nashik<span>Local</span></h2>
+                <p>
+                    Discover and support trusted local shops in Nashik.
+                    From groceries to fashion, everything local at one place.
+                </p>
+            </div>
+
+            <!-- Quick Links -->
+            <div class="footer-col">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="./pages/shops.html">Shops</a></li>
+                    <li><a href="./pages/about.html">About</a></li>
+                    <li><a href="./pages/contact.html">Contact</a></li>
+                </ul>
+            </div>
+
+            <!-- Categories -->
+            <div class="footer-col">
+                <h3>Categories</h3>
+                <ul>
+                    <li><a href="#">Electronics</a></li>
+                    <li><a href="#">Fashion</a></li>
+                    <li><a href="#">Home & Living</a></li>
+                    <li><a href="#">Grocery</a></li>
+                </ul>
+            </div>
+
+            <!-- Contact -->
+            <div class="footer-col">
+                <h3>Contact Us</h3>
+                <p>Nashik, Maharashtra</p>
+                <p>Email: support@nashiklocal.com</p>
+                <p>Phone: +91 9XXXXXXXXX</p>
+            </div>
+
         </div>
 
-        <div class="card">
-            <i class="fa-solid fa-couch yellow"></i>
-            <h3>Home & Living</h3>
-            <p>1 Shop Available</p>
+        <div class="footer-bottom">
+            <p>© 2026 NashikLocal. All Rights Reserved.</p>
         </div>
-
-        <div class="card">
-            <i class="fa-solid fa-gift purple"></i>
-            <h3>Gifts</h3>
-            <p>1 Shop Available</p>
-        </div>
-    </div>
-</section>
-
-<!-- Footer -->
-<footer>
-    <div class="footer-container">
-        <div>
-            <h4>NashikLocal</h4>
-            <p>
-                Empowering Nashik's local business community by connecting shoppers
-                with the best retail experiences in the city.
-            </p>
-        </div>
-
-        <div>
-            <h4>Quick Links</h4>
-            <a href="#">Home</a>
-            <a href="#">About Us</a>
-            <a href="#">Shops</a>
-            <a href="#">Contact</a>
-            <a href="#">Add Business</a>
-        </div>
-
-        <div>
-            <h4>Contact Us</h4>
-            <p><i class="fa-solid fa-location-dot"></i> College Road, Nashik</p>
-            <p><i class="fa-solid fa-phone"></i> +91 923 234 5678</p>
-            <p><i class="fa-solid fa-envelope"></i> info@nashiklocal.com</p>
-        </div>
-    </div>
-
-    <div class="copyright">
-        © 2025 NashikLocal Business Directory. All rights reserved.
-    </div>
-</footer>
+    </footer>
 
 </body>
+
 </html>
