--- a/index.html
+++ b/index.html
@@ -187,52 +187,57 @@
 
 
   <footer class="footer">
-    <div class="footer-container">
-      <!-- Brand -->
-      <div class="footer-col">
-        <h2 class="footer-logo">Nashik<span>Local</span></h2>
-        <p>
-          Discover and support trusted local shops in Nashik.
-          From groceries to fashion, everything local at one place.
-        </p>
-      </div>
+  <div class="footer-container">
 
-      <!-- Quick Links -->
-      <div class="footer-col">
-        <h3>Quick Links</h3>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="./pages/shops.html">Shops</a></li>
-          <li><a href="./pages/about.html">About</a></li>
-          <li><a href="./pages/contact.html">Contact</a></li>
-        </ul>
-      </div>
+    <!-- Brand -->
+    <div class="footer-col">
+      <h2 class="footer-logo">
+        <i class="fa-solid fa-location-dot"></i>
+        Nashik<span>Local</span>
+      </h2>
 
-      <!-- Categories -->
-      <div class="footer-col">
-        <h3>Categories</h3>
-        <ul>
-          <li><a href="#">Electronics</a></li>
-          <li><a href="#">Fashion</a></li>
-          <li><a href="#">Home & Living</a></li>
-          <li><a href="#">Grocery</a></li>
-        </ul>
-      </div>
-
-      <!-- Contact -->
-      <div class="footer-col">
-        <h3>Contact Us</h3>
-        <p>Nashik, Maharashtra</p>
-        <p>Email: support@nashiklocal.com</p>
-        <p>Phone: +91 9XXXXXXXXX</p>
-      </div>
-
+      <p>
+        Discover and support trusted local shops in Nashik.
+        From groceries to fashion, everything local at one place.
+      </p>
     </div>
 
-    <div class="footer-bottom">
-      <p>© 2026 NashikLocal. All Rights Reserved.</p>
+    <!-- Quick Links -->
+    <div class="footer-col">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="./pages/shops.html">Shops</a></li>
+        <li><a href="./pages/about.html">About</a></li>
+        <li><a href="./pages/contact.html">Contact</a></li>
+      </ul>
     </div>
-  </footer>
+
+    <!-- Categories -->
+    <div class="footer-col">
+      <h3>Categories</h3>
+      <ul>
+        <li><a href="#">Electronics</a></li>
+        <li><a href="#">Fashion</a></li>
+        <li><a href="#">Home & Living</a></li>
+        <li><a href="#">Grocery</a></li>
+      </ul>
+    </div>
+
+    <!-- Contact -->
+    <div class="footer-col">
+      <h3>Contact Us</h3>
+      <p>Nashik, Maharashtra</p>
+      <p>Email: support@nashiklocal.com</p>
+      <p>Phone: +91 9XXXXXXXXX</p>
+    </div>
+
+  </div>
+
+  <div class="footer-bottom">
+    <p>© 2026 NashikLocal. All Rights Reserved.</p>
+  </div>
+</footer>
 </body>
 
 </html>
