--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <!-- ================= CATEGORY SECTION ================= -->
   <section class="category-section container my-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
-      <h2 class="category-title">What are you looking for today?</h2>
+      <h2 class="animated-title">What are you looking for today?</h2>
       <a href="./pages/shops.html" class="view-all">View All Categories →</a>
     </div>
 
